--- a/tic tok tac/style.css
+++ b/tic tok tac/style.css
@@ -1,7 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
+
 * {
     padding: 0;
     margin: 0px;
     box-sizing: border-box;
+    color: aliceblue;
+    font-family: 'Nanum Pen Script', cursive;
 }
 
 html {
@@ -15,7 +19,10 @@ html {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: rgb(37, 37, 37);
+    /* background-color: red; */
 }
+
 .container-xo {
     display: flex;
     flex-direction: row;
@@ -27,7 +34,55 @@ html {
 .buttonxo {
     width: 150px;
     height: 150px;
-    padding: 50px;
-    font-size: 50px;
+    /* padding: 50px; */
+    font-size: 150px;
     border: 1px solid gray;
+    font-family: 'Nanum Pen Script', cursive;
+    background-color: rgba(255, 255, 255, 0.616);
+    color: rgb(55, 55, 55);
+    transition: 1s;
+    animation: color 1s;
+
 }
+
+.buttonxo:hover {
+    transition: .5s;
+    background-color: rgb(216, 216, 216);
+}
+
+.btnreset {
+    background-color: rgba(179, 98, 0, 0);
+    font-size: 14px;
+    /* height: 50px; */
+    margin-top: 25px;
+    padding: 5px 20px;
+    border: 1px solid rgb(179, 98, 0);
+    border-radius: 4px;
+    font-weight: 100;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(230, 230, 230);
+
+}
+
+.btnreset:hover {
+    /* font-size: 16px; */
+    transition: .2s;
+    background-color: rgb(208, 116, 3);
+}
+
+h1 {
+    font-size: 100px;
+    color: rgb(255, 255, 168);
+    margin-bottom: 5px;
+    /* animation-name: head; */
+    animation: color .5s infinite reverse;
+}
+
+@keyframes color {
+    from {
+        color: darkgoldenrod;
+    }
+    to {
+        color: orange;}
+
+  }
