--- a/tic tok tac/style.css
+++ b/tic tok tac/style.css
@@ -35,13 +35,14 @@ html {
     width: 150px;
     height: 150px;
     /* padding: 50px; */
-    font-size: 150px;
-    border: 1px solid gray;
+    font-size: 145px;
+    border: 4px solid gray;
     font-family: 'Nanum Pen Script', cursive;
     background-color: rgba(255, 255, 255, 0.616);
     color: rgb(55, 55, 55);
     transition: 1s;
     animation: color 1s;
+    /* box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.205); */
 
 }
 
